<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/for_menus"
        android:visible="false">
        <item
            android:id="@+id/menu_add"
            android:title="add">
        </item>
        <item
            android:id="@+id/menu_edit"
            android:title="edit">
        </item>
        <item
            android:id="@+id/menu_delete"
            android:orderInCategory="3"
            android:title="delete">
        </item>
    </group>

    <group
        android:id="@+id/ext_for_menus"
        android:visible="false">
        <item
            android:id="@+id/menu_copy"
            android:orderInCategory="1"
            android:title="copy">
        </item>
        <item
            android:id="@+id/menu_cut"
            android:orderInCategory="2"
            android:title="cut" />
        <item
            android:id="@+id/menu_paste"
            android:orderInCategory="3"
            android:title="paste">
        </item>
    </group>

    <group android:id="@+id/menu_group_for_number_guess" android:visible="false">
        <item
            android:id="@+id/newGame"
            android:title="@string/new_game">

            <menu>
                <item
                    android:id="@+id/level1"
                    android:title="@string/level1" />
                <item
                    android:id="@+id/level2"
                    android:title="@string/level2" />
                <item
                    android:id="@+id/level3"
                    android:title="@string/level3" />
            </menu>

        </item>
    </group>

    <item
        android:id="@+id/menu_exit"
        android:onClick="onClickExit"
        android:orderInCategory="4"
        android:title="exit" />
</menu>
